# bootstrap_analyzer_pkg

./: pyproject.toml  readme.md  requirements.txt  setup.py  synthetic_bootstrap_data.csv
bootstrap_analyzer/: __init__.py  core.py  io.py
examples/: analysis_output.pkl  make_ml_analysis  make_ml_analysis.py  prep_and_test_ml.py  prepare_bootstrap_samples.py  run_analysis_example.py  synthetic_bootstrap_data.csv
