[project]
name = "stratifiedbootstrap_uisikdag"
version = "0.0.1"
authors = [
  { name="Umit Isikdag", email="umit@umit.web.tr" },
]
description = "Stratified Bootstrap Generator"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/uisikdag/bootstrap_analyzer_pkg"
Issues = "https://github.com/uisikdag/bootstrap_analyzer_pkg/issues"